--- a/gb/21/9/22/n13252460.md
+++ b/gb/21/9/22/n13252460.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mvzvlt3463/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mvzvlt3463/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mvzvlt3463/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>《水果奶奶》获2021台中国际动画影展闭幕片</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13252506-2109220358291487-600x400.jpg" />
 <h6>由公视制作的动画电影《妖果小学-水果奶奶的大秘密》获选为“台中国际动画影展”闭幕片，水果奶奶现身影展售票开跑记者会。（公视提供）
 </h6>
 <hr>
-	<p>【大纪元2021年09月22日讯】（大纪元记者马维芬报导）台湾最长寿儿童节目《<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%86%B0%E6%B7%87%E6%B7%8B.md#1">水果冰淇淋</a>》是许多孩子成长的共同记忆，公视今年推出角色IP动画电影《妖果小学-<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%A5%B6%E5%A5%B6.md#1">水果奶奶</a>的大秘密》，该片获选为“2021<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">台中国际动画影展</a>”闭幕片之一，10月13日举办世界首映。</p>
-<p>今（22）日<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%BC%A0%E6%B0%B8%E6%98%8C.md#1">张永昌</a>导演偕同赵自强扮演的<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%A5%B6%E5%A5%B6.md#1">水果奶奶</a>及“<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%A6%96%E6%80%AA%E5%A4%A7%E5%81%B6.md#1">妖怪大偶</a>”库伦、嘎嘎出席影展售票开跑记者会，水果奶奶开心笑说：“奶奶现在不只化身3D动画世界的角色，还变成电影咖了！很期待用新的方式，为新一代的小朋友说出一样用心的好故事。”</p>
-<figure id="attachment_13252508" aria-describedby="caption-attachment-13252508" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13252508-2109220358331487.jpg"><img class="size-large wp-image-13252508" title="水果奶奶" src="https://i.epochtimes.com/assets/uploads/2021/09/id13252508-2109220358331487-600x400.jpg" alt="水果奶奶" width="600" b="400" /></a><figcaption id="caption-attachment-13252508" class="wp-caption-text">《妖果小学-水果奶奶的大秘密》获选为“<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">台中国际动画影展</a>”闭幕片，<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%BC%A0%E6%B0%B8%E6%98%8C.md#1">张永昌</a>导演（右二）偕同水果奶奶（左二）及<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%A6%96%E6%80%AA%E5%A4%A7%E5%81%B6.md#1">妖怪大偶</a>库伦（左一）、嘎嘎出席影展售票开跑记者。（公视提供）</figcaption></figure>
-<p>执导《妖果小学-水果奶奶的大秘密》的张永昌导演也已担任《<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%86%B0%E6%B7%87%E6%B7%8B.md#1">水果冰淇淋</a>》节目导演20年，认为水果奶奶虽长年陪伴台湾的孩子长大，但若没有被图像化创造出IP魅力，随着孩童年龄增长，这段共同记忆将难以被凝聚，因此开始构思并打造水果奶奶动画角色。</p>
+	<p>【大纪元2021年09月22日讯】（大纪元记者马维芬报导）台湾最长寿儿童节目《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%86%B0%E6%B7%87%E6%B7%8B.md#1">水果冰淇淋</a>》是许多孩子成长的共同记忆，公视今年推出角色IP动画电影《妖果小学-<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%A5%B6%E5%A5%B6.md#1">水果奶奶</a>的大秘密》，该片获选为“2021<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">台中国际动画影展</a>”闭幕片之一，10月13日举办世界首映。</p>
+<p>今（22）日<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%A0%E6%B0%B8%E6%98%8C.md#1">张永昌</a>导演偕同赵自强扮演的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%A5%B6%E5%A5%B6.md#1">水果奶奶</a>及“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A6%96%E6%80%AA%E5%A4%A7%E5%81%B6.md#1">妖怪大偶</a>”库伦、嘎嘎出席影展售票开跑记者会，水果奶奶开心笑说：“奶奶现在不只化身3D动画世界的角色，还变成电影咖了！很期待用新的方式，为新一代的小朋友说出一样用心的好故事。”</p>
+<figure id="attachment_13252508" aria-describedby="caption-attachment-13252508" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13252508-2109220358331487.jpg"><img class="size-large wp-image-13252508" title="水果奶奶" src="https://i.epochtimes.com/assets/uploads/2021/09/id13252508-2109220358331487-600x400.jpg" alt="水果奶奶" width="600" b="400" /></a><figcaption id="caption-attachment-13252508" class="wp-caption-text">《妖果小学-水果奶奶的大秘密》获选为“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">台中国际动画影展</a>”闭幕片，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%A0%E6%B0%B8%E6%98%8C.md#1">张永昌</a>导演（右二）偕同水果奶奶（左二）及<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A6%96%E6%80%AA%E5%A4%A7%E5%81%B6.md#1">妖怪大偶</a>库伦（左一）、嘎嘎出席影展售票开跑记者。（公视提供）</figcaption></figure>
+<p>执导《妖果小学-水果奶奶的大秘密》的张永昌导演也已担任《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C%E5%86%B0%E6%B7%87%E6%B7%8B.md#1">水果冰淇淋</a>》节目导演20年，认为水果奶奶虽长年陪伴台湾的孩子长大，但若没有被图像化创造出IP魅力，随着孩童年龄增长，这段共同记忆将难以被凝聚，因此开始构思并打造水果奶奶动画角色。</p>
 <p>他说：“身为台中人，很高兴我的第三部动画电影长片在台中做全球首映，希望孩子们可以看到更多台湾原创自制的动画，也期许这样有台湾文化力量的作品有一天可以走向国际。”</p>
 <p>公视节目部副理林琼芬指出，在文化部的前瞻预算支持下，今年推出多部动画作品，可说是“公视动画元年”，其中也包含逐步将水果奶奶IP发展出动画电影；并表示《水果冰淇淋》从1998年开播至今已23年仍持续制播，“水果奶奶”也一直冻龄65岁，希望电影的推出重新唤起大小朋友的记忆。“其实角色IP化可以创造并延伸出更多可能性，让大家对好节目和经典人物更有感，请大家期待水果奶奶的电影！”</p>
 <p>“2021台中国际动画影展”自10月8日至10月13日在新时代凯擘影城举办，精选156部作品、放映57场次；闭幕片之一为公视制作的原创动画电影《妖果小学-水果奶奶的大秘密》，将于10月13日晚间7点首映。9月24日中午12时起开放预售早鸟票。</p>
@@ -19,41 +19,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/17/9/16/n9638216.md#1">公视儿童节目新4K动画片头 获总统赞赏</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/6/6/n10458961.md#1">港府倡解禁日本四县蔬果奶类进口</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/20/1/25/n11819806.md#1">偕众星穿古装拍片 梁心颐、王若琳推年味歌曲</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/8/9/n13148661.md#1">剧团险因疫情解散 赵自强申请纾困盼挺过难关</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/9/16/n9638216.md#1">公视儿童节目新4K动画片头 获总统赞赏</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/6/n10458961.md#1">港府倡解禁日本四县蔬果奶类进口</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/25/n11819806.md#1">偕众星穿古装拍片 梁心颐、王若琳推年味歌曲</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/9/n13148661.md#1">剧团险因疫情解散 赵自强申请纾困盼挺过难关</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388351.md#1">【舞蹈三剑客】神韵演员如何保持良好体态</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391932.md#1">【新闻看点】彭帅与巴赫视频 五大疑点拷问真相</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391433.md#1">【新闻大家谈】3天让彭帅4露面 中共会抛张高丽？</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389736.md#1">【军事热点】美日海军反潜战演习意在牵制中共</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13386820.md#1">党媒再发“彭帅照”难平众怒 恐冲击北京冬奥</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389152.md#1">岳山：北京二十大防反习 习家军铺满公安部</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同抚养小孩</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389860.md#1">《少年》香港禁映 导演：影片是通往自由的窗口</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391890.md#1">艺人大S与汪小菲宣布离婚 大陆网民反应两极</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391647.md#1">维生素E不只抗老 有4大功效 2招正确补充</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mvzvlt3463/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mvzvlt3463/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/22/n13252460.htm">《水果奶奶》获2021台中国际动画影展闭幕片</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/22/n13252460.htm">《水果奶奶》获2021台中国际动画影展闭幕片</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mvzvlt3463/djy/blob/master/gb/21/9/22/n13252460.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mvzvlt3463/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mvzvlt3463/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/9/22/n13252460.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
